--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "buffimachi",
+  "name": "Buffimuchi",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.js; exit 0",
+    "lint-fix": "eslint src/**/*.js --fix; exit 0"
   },
   "eslintConfig": {
     "extends": "react-app"
